// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > matches snapshot for single-column layout 1`] = `
<DocumentFragment>
  <div
    class="mx-auto grid h-full min-h-0 w-full items-start gap-3 px-3 py-2 sm:gap-6 sm:px-4 sm:py-3 lg:px-6 flex flex-col"
  >
    <main
      class="min-h-0 min-w-0 overflow-y-auto [overscroll-behavior:contain] h-full flex-1"
    >
      <div>
        settings-like-content
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > matches snapshot for three-column layout 1`] = `
<DocumentFragment>
  <div
    class="mx-auto grid h-full min-h-0 w-full items-start gap-3 px-3 py-2 sm:gap-6 sm:px-4 sm:py-3 lg:px-6 grid-cols-[var(--sidebar-width)_minmax(0,1fr)_var(--sidebar-width)]"
  >
    <aside
      class="sticky top-0 min-h-0 self-start overflow-y-auto bg-card [overscroll-behavior:contain] rounded-l-lg border-r border-border"
    >
      <div>
        left
      </div>
    </aside>
    <main
      class="min-h-0 min-w-0 overflow-y-auto [overscroll-behavior:contain] h-full"
    >
      <div>
        middle
      </div>
    </main>
    <aside
      class="sticky top-0 min-h-0 self-start overflow-y-auto bg-card [overscroll-behavior:contain] rounded-r-lg border-l border-border"
    >
      <div>
        right
      </div>
    </aside>
  </div>
</DocumentFragment>
`;
